--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "dayjs": "^1.11.13",
     "esbuild": "^0.24.2",
     "firebase": "^11.3.1",
+    "framer-motion": "^12.4.7",
     "react": "^19.0.0",
     "react-currency-mask": "^1.3.3",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
+    "react-select": "^5.10.0",
     "react-toastify": "^11.0.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^4.0.8",
